--- a/python/pyPdf/README
+++ b/python/pyPdf/README
@@ -1,10 +1,10 @@
 A Pure-Python library built as a PDF toolkit. It is capable of:
- * extracting document information (title, author, ...),
- * splitting documents page by page,
- * merging documents page by page,
- * cropping pages,
- * merging multiple pages into a single page,
- * encrypting and decrypting PDF files.
+ * extracting document information (title, author, ...)
+ * splitting documents page by page
+ * merging documents page by page
+ * cropping pages
+ * merging multiple pages into a single page
+ * encrypting and decrypting PDF files
 
 By being Pure-Python, it should run on any Python platform without any
 dependencies on external libraries. It can also work entirely on StringIO
