--- a/system/fio/README
+++ b/system/fio/README
@@ -1,14 +1,9 @@
-fio is an I/O tool meant to be used both for benchmark and stress/hardware
-verification. It has support for 13 different types of I/O engines (sync,
-mmap, libaio, posixaio, SG v3, splice, null, network, syslet, guasi,
-solarisaio, and more), I/O priorities (for newer Linux kernels), rate I/O,
-forked or threaded jobs, and much more. It can work on block devices as well
-as files. fio accepts job descriptions in a simple-to-understand text format.
-Several example job files are included. fio displays all sorts of I/O
-performance information. Fio is in wide use in many places, for both
-benchmarking, QA, and verification purposes. It supports Linux, FreeBSD,
-NetBSD, OS X, OpenSolaris, AIX, HP-UX, and Windows.
-
+fio is a tool that will spawn a number of threads or processes doing a
+particular type of io action as specified by the user. fio takes a
+number of global parameters, each inherited by the thread unless
+otherwise parameters given to them overriding that setting is given.
+The typical use of fio is to write a job file matching the io load
+one wants to simulate.
 
 Example Usage:
 
