phply, switch to i586, update README

--- a/python/phply/README
+++ b/python/phply/README
@@ -1,5 +1,5 @@
-phply is a lexer and parser for the PHP programming language written in
-Python.
+phply is a parser for the PHP programming language written using PLY, a
+Lex/YACC-style parser generator toolkit for Python.
 
 Included tools installed to /usr/bin:
 
