--- a/network/ufw/README
+++ b/network/ufw/README
@@ -20,7 +20,7 @@ title=Application title
 description=A description for the application.
 ports=137,138/udp|139,445/tcp
 
-Where xx.xx.xx.x is the IP address of an external host, enable this
+Where xx.xx.xx.xx is the IP address of an external host, enable this
 application profile by executing the following as root:
 
 # ufw allow from xx.xx.xx.xx app Application
